# wxVcashGUI

./: .gitignore  AddressesPage.cpp  CMakeLists.txt  ConsolePage.cpp  Controller.cpp  HistoryPage.cpp  MiningPage.cpp  README.md  Resources.cpp  StatusBar.cpp  StatusBarImage.cpp  StatusBarWallet.cpp  ToolsPanel.cpp  TransferPage.cpp  View.cpp
include/: AddressesPage.h  ConsolePage.h  Controller.h  HistoryPage.h  MiningPage.h  Resources.h  StatusBar.h  StatusBarImage.h  StatusBarWallet.h  ToolsPanel.h  View.h
lib/: Readme.txt
resources/: greenR16.cpp  locked22.cpp  redR16.cpp  settings20.c  settings22.c  settings22.cpp  tools22.cpp  unlocked22.cpp  yellowR16.cpp
